--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
             "org.seleniumhq.selenium:selenium-java:4.20.0",
             "org.junit.jupiter:junit-jupiter:5.9.1",
             "org.slf4j:slf4j-simple:2.0.6",
-            "com.github.javafaker:javafaker:1.0.2"
+            "com.github.javafaker:javafaker:1.0.2",
+            "io.github.bonigarcia:webdrivermanager:5.9.2"
 
     )
 }
